--- a/public/pricing.html
+++ b/public/pricing.html
@@ -54,7 +54,7 @@
 <body>
 <div class="wrap">
   <div class="header">
-    <img src="hansora-credits.png" alt="Hansora Credits" />
+    <img src="https://qmaealblegvcwodlmeht.supabase.co/storage/v1/object/public/downloads/2025/ChatGPT%20Image%20Oct%2020,%202025,%2011_50_37%20AM.png" alt="Hansora Credits" />
     <div>
       <h1>Hansora Credits</h1>
       <div class="sub">Payments happen on our secure provider checkout outside Telegram. We do this to protect your payment and personal information.</div>
@@ -79,7 +79,7 @@
   if (tg) { try { tg.ready(); tg.expand(); } catch(e){} }
 
   const PLANS = [
-    { id:"50",  credits:50,  price:"$5.50",  url:"https://test.checkout.dodopayments.com/buy/pdt_lejFi2zDhuYu8JHZXGe16?quantity=1" },
+    { id:"50",  credits:50,  price:"$5.50",  url:"https://checkout.dodopayments.com/buy/pdt_rhwFKrIujdfX9XtKvFixb?quantity=1" },
     { id:"100", credits:100, price:"$10.50", url:"https://checkout.dodopayments.com/buy/pdt_fbuaTR8pLS3osPQefQlCl?quantity=1" },
     { id:"250", credits:250, price:"$25.50", url:"https://checkout.dodopayments.com/buy/pdt_u2CHk1ygmwi2Lqw6M9jpr?quantity=1" },
     { id:"500", credits:500, price:"$50.00", url:"https://checkout.dodopayments.com/buy/pdt_7V2nSlMm96Hh5OuLhJYuy?quantity=1", badge:"BEST VALUE" },
