--- a/public/sora2.html
+++ b/public/sora2.html
@@ -90,7 +90,10 @@
               />
               <div id="thumbs" class="mt-2 flex gap-2 flex-wrap"></div>
               <p class="text-[11px] text-zinc-500">
-                Max size 10MB. You can send only text, or text + 1 image.
+                Max size 10MB.
+              </p>
+              <p class="mt-1 text-[11px] font-semibold text-yellow-300">
+                Currently images with real human faces are not allowed by OpenAI.
               </p>
             </div>
 
